--- a/calc.html
+++ b/calc.html
@@ -7,10 +7,12 @@
         body,html{
             margin: 0px;
             height: 100%;
+            text-align:center;
         }
         header{
             background-color: aqua;
             height: 80px;
+            
         }
         main{
             background-color: blueviolet;
@@ -24,8 +26,14 @@
     </style>
 </head>
 <body>
-   <header></header>
-<main></main>
-<footer></footer>
+   <header>
+     I am a header
+   </header>
+<main>
+    I am a master
+</main>
+<footer>
+    I am a footer
+</footer>
 </body>
 </html>
