--- a/hw1415_6.html
+++ b/hw1415_6.html
@@ -9,8 +9,12 @@
             background-color:#f1f1f1;
             border-radius: 3px;
             margin: 0 auto;
-            text-align: center;
             box-shadow: 2px 2px 5px rgb(203,203,203);
+            list-style: none;
+        }
+
+        .nav ul{
+            list-style: none;
         }
 
         .nav::after{
@@ -19,8 +23,8 @@
             clear: both;
         }
 
+
         .menu{
-            list-style: none;
             float: left;
             margin: 0px;
             padding: 0px;
@@ -34,7 +38,6 @@
         .menu li a{
             text-decoration: none;
             color: black;
-
         }
 
         .menu li:hover{
@@ -50,9 +53,7 @@
             position: relative;
         }
 
-
         .menu .children ul{
-             list-style: none;
              position: absolute;
              padding: 0px;
              margin: 0px;
@@ -65,7 +66,6 @@
         .menu .children ul li{
             float: none;
             width: 200px;
-            text-align: left;
             padding: 5px 20px 5px 15px;
 
         }
