--- a/hw1415_6.html
+++ b/hw1415_6.html
@@ -69,6 +69,14 @@
             padding: 5px 20px 5px 15px;
 
         }
+
+        .summarize{
+            width: 50%;
+            margin: 100px auto;
+            box-shadow: 5px 5px 20px rgb(203,203,203);
+            background-color: #72B890;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
@@ -87,6 +95,15 @@
                </div>
            </li>
        </ul>
+   </div>
+
+   <div class="summarize">
+
+       <ol>
+           用到的知识点
+           <li>利用伪元素清除浮动，以便浮动元素能够撑起父元素(浮动元素、绝对定位元素的高度不会计入最近块级父元素的高度，就好像父元素不知道其存在一样)</li>
+           <li>利用CSS伪类实现菜单的显示与隐藏</li>
+       </ol>
    </div>
 </body>
 </html>
