--- a/viticalAlignProblem.html
+++ b/viticalAlignProblem.html
@@ -60,7 +60,7 @@
 <div class="problem">
     需要的效果：文字垂直居中<br>
     问题：第一个效果和第二个效果不同的原因是什么？（源码中第二个效果的img元素没有设置 display: inline-block; vertical-align: middle;这两个样式）<br/>
-    我的思路：我是想实现文字在div中垂直居中，所以我给包裹文字的div设置了display: inline-block; vertical-align: middle;这两个样式，但没成功（如效果二所示），
+    我的思路：我是想实现文字在span中垂直居中，所以我给包裹文字的div设置了display: inline-block; vertical-align: middle;这两个样式，但没成功（如效果二所示），
     在给img元素的样式也增加了display: inline-block; vertical-align: middle;就实现了效果一
 </div>
 </body>
