--- a/hw/hw1415_6.html
+++ b/hw/hw1415_6.html
@@ -96,13 +96,22 @@
            </li>
        </ul>
    </div>
-
+   <br/>
+   <div class="problem">
+        操作：鼠标移动到‘更多’菜单，隐藏的下拉菜单得以显示
+        问题：1，鼠标移动到下拉菜单，鼠标已经不在‘更多’菜单上了，为什么‘更多’菜单的背景表现的和鼠标在其上面一样？
+              2，鼠标在‘更多’菜单上时，‘更多’菜单背景发生变化，为什么作为其子元素的下拉菜单的背景没有变？
+   </div>
+   <br/>
    <div class="summarize">
 
        <ol>
            用到的知识点
            <li>利用伪元素清除浮动，以便浮动元素能够撑起父元素(浮动元素、绝对定位元素的高度不会计入最近块级父元素的高度，就好像父元素不知道其存在一样)</li>
            <li>利用CSS伪类实现菜单的显示与隐藏</li>
+           <li>CSS样式box-shadow实现盒子模型阴影</li>
+           <li>border-radius美化边框</li>
+           <li>绝对定位实现从内容上脱离父元素但是位置与父元素息息相关</li>
        </ol>
    </div>
 </body>
