--- a/hw/hw1415_6.html
+++ b/hw/hw1415_6.html
@@ -77,6 +77,10 @@
             background-color: #72B890;
             padding: 20px;
         }
+
+        .problem{
+            background-color: red;
+        }
     </style>
 </head>
 <body>
@@ -98,7 +102,7 @@
    </div>
    <br/>
    <div class="problem">
-        操作：鼠标移动到‘更多’菜单，隐藏的下拉菜单得以显示
+        <p>操作：鼠标移动到‘更多’菜单，隐藏的下拉菜单得以显示</p>
         问题：1，鼠标移动到下拉菜单，鼠标已经不在‘更多’菜单上了，为什么‘更多’菜单的背景表现的和鼠标在其上面一样？
               2，鼠标在‘更多’菜单上时，‘更多’菜单背景发生变化，为什么作为其子元素的下拉菜单的背景没有变？
    </div>
