--- a/hw/hw1415_6.html
+++ b/hw/hw1415_6.html
@@ -81,6 +81,9 @@
         .problem{
             width: 50%;
             background-color: rosybrown;
+            margin: 0 auto;
+            padding: 10px;
+            box-shadow: 5px 5px 40px rosybrown;
         }
     </style>
 </head>
@@ -105,7 +108,7 @@
    <div class="problem">
         <p>操作：鼠标移动到‘更多’菜单，隐藏的下拉菜单得以显示</p>
         <p>问题：1，鼠标移动到下拉菜单，鼠标已经不在‘更多’菜单上了，为什么‘更多’菜单的背景表现的和鼠标在其上面一样？</p>
-       < p>     2，鼠标在‘更多’菜单上时，‘更多’菜单背景发生变化，为什么作为其子元素的下拉菜单的背景没有变？</p>
+        <p>     2，鼠标在‘更多’菜单上时，‘更多’菜单背景发生变化，为什么作为其子元素的下拉菜单的背景没有变？</p>
    </div>
    <br/>
    <div class="summarize">
