--- a/hw/hw1415_6.html
+++ b/hw/hw1415_6.html
@@ -81,7 +81,7 @@
         .problem{
             width: 50%;
             background-color: rosybrown;
-            margin: 0 auto;
+            margin: 100px auto;
             padding: 10px;
             box-shadow: 5px 5px 40px rosybrown;
         }
